@@ -15,7 +15,7 @@ LOGIN_REQ_TYPE=GET+POST
 LOGIN_POST_STR= username=%s&password=%s #means the same credentials for all clients/users
 LOGIN_URL=http://10.30.6.42:8888/bax/root/Admin
 LOGIN_URL_MAX_TIME=3
-LOGIN_URL_INTERLEAVE_TIME=2
+LOGIN_URL_INTERLEAVE_TIME=2000
 LOGIN_CYCLING=y
 
 ########### UAS SECTION ####################################
@@ -23,7 +23,7 @@ UAS=y
 UAS_URLS_NUM=1
 UAS_URL=http://10.30.6.42:8888/bax/Admin/ServiceList.do
 UAS_URL_MAX_TIME =4
-UAS_URL_INTERLEAVE_TIME =1
+UAS_URL_INTERLEAVE_TIME =1000
 
 ########### LOGOFF SECTION #################################
 LOGOFF=n
