@@ -23,7 +23,7 @@ UAS=y
 UAS_URLS_NUM=1
 UAS_URL=https://localhost/apache2-default/ACE-INSTALL.html
 UAS_URL_MAX_TIME =8
-UAS_URL_INTERLEAVE_TIME =1
+UAS_URL_INTERLEAVE_TIME =1000
 
 ########### LOGOFF SECTION #################################
 LOGOFF=n
@@ -61,7 +61,7 @@ UAS=y
 UAS_URLS_NUM=1
 UAS_URL=https://localhost/apache2-default/index.html
 UAS_URL_MAX_TIME =5
-UAS_URL_INTERLEAVE_TIME =2
+UAS_URL_INTERLEAVE_TIME =2000
 
 ########### LOGOFF SECTION #################################
 LOGOFF=n
